--- a/Navigation/Navigation.csproj
+++ b/Navigation/Navigation.csproj
@@ -68,4 +68,13 @@
 		<PackageReference Include="Syncfusion.Maui.NavigationDrawer" Version="26.2.8" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ProfilePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
